# lilith-browser

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_unique_constraints.py  003_add_fulltext_search.py
src/core/: __init__.py  cli.py  config.py  database.py  embeddings.py  models.py
src/daemon/: __init__.py  app.py
src/ingest/: __init__.py  sync.py  vivaldi_reader.py
src/mcp_server/: __init__.py  __main__.py  hybrid_search.py  server.py  tools.py
systemd/: lilith-browser-ingest.service  lilith-browser-ingest.timer
tests/: test_tools_source_separation.py
