[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilith-browser"
version = "0.1.0"
description = "Browser history and bookmarks for Lilith agent RAG (Vivaldi, PostgreSQL, MCP)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.0.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "lilith-core",
]

[tool.uv.sources]
lilith-core = { path = "../lilith-core" }

[project.scripts]
lilith-browser = "core.cli:main"
mcp = "mcp_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/daemon", "src/ingest", "src/mcp_server"]

[tool.hatch.build.targets.sdist]
include = ["src/", "migrations/", "alembic.ini", "main.py", "README.md", ".env.example"]
