[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilith-browser"
version = "0.1.0"
description = "Browser history and bookmarks for Lilith agent RAG (Vivaldi, PostgreSQL, MCP)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.0.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "lilith-core",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "mypy>=1.13.0", "pytest>=8.0.0"]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["migrations", ".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "TCH", "PTH", "N", "W"]
ignore = ["E501", "B905", "E402", "E701", "SIM105"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
exclude = "migrations/"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv.sources]
lilith-core = { path = "../lilith-core" }

[project.scripts]
lilith-browser = "core.cli:main"
mcp = "mcp_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/daemon", "src/ingest", "src/mcp_server"]

[tool.hatch.build.targets.sdist]
include = ["src/", "migrations/", "alembic.ini", "main.py", "README.md", ".env.example"]
